some files added

--- a/education.html
+++ b/education.html
@@ -72,11 +72,12 @@
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg>
         </div>
-        <button class="a1"><a href="#"></a></button>
-        <button class="a2"><a href="#"></a></button>
-          <button class="a3"><a href="#"></a></button>
-        <button class="a4"><a href="#"></a></button>
-         <button class="a5"><a href="#"></a></button>
+        <button class="a1"><a href=""></a></button>
+        <button class="a2"><a href=""></a></button>
+          <button class="a3"><a href=""></a></button>
+        <button class="a4"><a href=""></a></button>
+         <button class="a5"><a href=""></a></button>
+         <button class="a6"><a href=""></a></button>
     </div>
     <p class="sp">MY SPECIALISATION</p>
     <p class="my">MY EDUCATION BACKGROUND
