replacing files into their place

--- a/contact me.html
+++ b/contact me.html
@@ -95,18 +95,7 @@
      <div class="msgbox">
         <input type="<textarea rows="" cols="" placeholder="MESSAGE"></textarea>" 
      </div>
-
-     
-
-
-
-
-
-
-
-
-
-
+     <button id="con" > CONTACT ME</button>
         <div id="ico">
            <p> 
           <a href=" https://www.facebook.com/ntwari.fiacre.7?_rdc=1&_rdr"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
