--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="left">
         <picture>
-      <img src="tomy-boy-.jpg" alt="" width=" 232px" height="1230px" >
+      <img src="fiacre.jpg" alt="">
       </picture>
      <div class="hamburger">
             <div class="listing">
@@ -36,12 +36,12 @@
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                   </svg>
             </div>
-              <button class="a1"></button>
-              <button class="a2"></button>
-              <button class="a3" ></button>
-              <button class="a4" ></button>
-              <button class="a5"></button>
-              <button class="a6"></button>
+              <button class="a1"><a href="education.html"></a></button>
+              <button class="a2"><a href=""></a></button>
+              <button class="a3" ><a href=""></a></button>
+              <button class="a4" ><a href=""></a></button>
+              <button class="a5"><a href=""></a></button>
+              <button class="a6"><a href=""></a></button>
         </div>
     <!-- lines eshatu nazo za button -->
     </div>
