correcting some files

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- lines eshatu nazo za button -->
     </div>
     <!-- line na icon y play -->
-       <p style="width: 88px;height: 0;"><a href="">@ntwarifiacre</a></p>
+       <p style="width: 88px;height: 0;"><a href="">@ntwarifiacre2022</a></p>
     <div class="bottom">
        
           <p > 
