resizing images and switching them properly

--- a/hamburger.html
+++ b/hamburger.html
@@ -12,7 +12,7 @@
  <main class="bck-img">
     <div class="header-background">
     <header class="header container">
-     <div class="logo -warapper">
+     <div class="logo-wrapper">
      <a class="logo" href="#">LOGO</a>
       </div>
         <nav>
