--- a/blog.html
+++ b/blog.html
@@ -72,10 +72,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="48.4" height="44" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg>
-        </div>
          <button class="a1"><a href=""></a></button>
          <button class="a2"><a href=""></a></button>
-          <button class="a3"><a href=""></a></button>
+          <button class="a3"><a href=" ">1</a></button>
           <button class="a4"><a href=""></a></button>
          <button class="a5"><a href=""></a></button>
          <button class="a6"><a href=""></a></button> 
