unwanted emoji removed

--- a/contact me.html
+++ b/contact me.html
@@ -96,10 +96,10 @@
             </div>   
          <div class="msgbox">
         <input type="<textarea rows="" cols="" placeholder="MESSAGE"></textarea> 
-        <p style="font-size:48px ;left: 806px;
+        <!-- <p style="font-size:48px ;left: 806px;
         top: 353px;">
           &#128512; &#128516; &#128525;
-          </p>
+          </p> -->
             </div>
     
         <button id="con" > CONTACT ME</button>
