adding links to buttons

--- a/contact me.html
+++ b/contact me.html
@@ -72,12 +72,12 @@
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg>
         </div>
-         <button id="index"><a href="./index.html"></a></button>
-         <button id="education"><a href=""></a></button>
-          <button id="experience"><a href=""></a></button>
-         <button id="blog"><a href=""></a></button>
-         <button id="contact"><a href=""></a></button> 
-         <button  class="a6"><a href=""></a></button> 
+        <a href="index.html"><button class="a1"></button></a>
+        <a href="education.html"><button class="a2"></button></a>
+          <a href="area.html"><button class="a3"></button></a>
+          <a href="blog.html"> <button class="a4"></button></a>
+         <a href="contact me.html"><button class="a5"></button></a>
+           <a href="index.html"><button class="a6"></button></a>
     </div>
     <p class="sp">
         KIGALI,RWANDA
