--- a/blog.html
+++ b/blog.html
@@ -72,12 +72,13 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="48.4" height="44" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg>
-         <button class="a1"><a href=""></a></button>
-         <button class="a2"><a href=""></a></button>
-          <button class="a3"><a href=" ">1</a></button>
-          <button class="a4"><a href=""></a></button>
-         <button class="a5"><a href=""></a></button>
-         <button class="a6"><a href=""></a></button> 
+              </div>
+              <a href="index.html"><button class="a1"></button></a>
+              <a href="education.html"><button class="a2"></button></a>
+                <a href="area.html"><button class="a3"></button></a>
+                <a href="blog.html"> <button class="a4"></button></a>
+               <a href="contact me.html"><button class="a5"></button></a>
+                 <a href="index.html"><button class="a6"></button></a>
     </div>
     <p class="des">
         This is a little description on
