--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                   </svg>
             </div>
-              <button class="a1"><a href="education.html"></a></button>
-              <button class="a2"><a href=""></a></button>
-              <button class="a3" ><a href=""></a></button>
-              <button class="a4" ><a href=""></a></button>
-              <button class="a5"><a href=""></a></button>
-              <button class="a6"><a href=""></a></button>
+            <a href="index.html"><button class="a1"></button></a>
+            <a href="education.html"><button class="a2"></button></a>
+              <a href="area.html"><button class="a3"></button></a>
+              <a href="blog.html"> <button class="a4"></button></a>
+             <a href="contact me.html"><button class="a5"></button></a>
+               <a href="index.html"><button class="a6"></button></a>
         </div>
     <!-- lines eshatu nazo za button -->
     </div>
