re organizing some files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li style="
 
       position: absolute;
-      width: 100px;
+      width: 250px;
       height: 23px;
       left: 325px;
       top: 31px;
@@ -49,7 +49,7 @@
 
       position: absolute;
       width: 209px;
-      height: 23px;
+      height: 90px;
       left: 484px;
       top: 28px;
       
@@ -70,8 +70,8 @@
 
 <body>
     <div class="right">
-  <p class="ashimwe">ASHIMWE,I'M </p>
-  <p  class="fifi" style="color: aliceblue;"> NTWARI FIACRE</p>
+  <p class="ashimwe">I'M </p>
+  <p  class="fifi" style="color: aliceblue;"> NTWARI ASHIMWE FIACRE</p>
   <div class="line"></div>
   <div class="vid">
     <p style="color: antiquewhite;">
