--- a/hamburger.html
+++ b/hamburger.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hamburger Menu</title>
-    <link rel="" href="">
-    <link rel=""href="./fontawesome-free-5.13.0-web/css/all.css" >
+    <link rel="stylesheet" href="hambu.css">
+     <script defer src="first.js/javascript" ></script>
     </head>
  <body> 
- <main class="bck-img">
-    <div class="header-background">
-    <header class="header container">
-     <div class="logo-wrapper">
-     <a class="logo" href="#">LOGO</a>
-      </div>
-        <nav>
-     <a href="#">home</a>
-     <a href="#">EDucation</a>
-     <a href="#">Experience</a>
-     <a href="#">Blog</a>
-     <a href="#">Contact</a>
-      </nav>
+    
+   <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+         <svg xmlns="http://www.w3.org/2000/svg" width="48.4" height="44" fill="#ffffff" class="bi bi-list" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+          </svg>
+      </a>
+    </div>
+ 
       <!-- <div class="close menu"><i class="fa fa-times"></i></div> -->
       <!-- <span class="icons">
              <i class="fab fa-facebook"></i>
@@ -29,18 +29,7 @@
       <i class="fab fa-twitter"></i>
       <i class="fab fa-github"></i>
       <i class="fab fa-google"></i> -->
-
-
-  </header>  
- </div>
- </main>
-<script src="./first.js"></script>
-
-
-
-
-
-
+  
  </body>
 
 
