--- a/contact me.html
+++ b/contact me.html
@@ -135,7 +135,7 @@
             +250 790 01 861
      </p>
      <div class="error"></div>
-     <form id="form" onsubmit="return validate()"     method="get"action="post.php">
+     <form id="form" onsubmit="return validate()"     method="get"action="contact me.html">
           <input type="text" id="name" placeholder="NAME" style="
           position:absolute;  
           width: 298px;
