adding some links

--- a/contact me.html
+++ b/contact me.html
@@ -13,7 +13,7 @@
       var name = document.getElementById("name");
       var email = document.getElementById("email");
       var subject = document.getElementById("subject");
-      var message =document.getElementById("")
+      var msgbox =document.getElementById("msgbox")
    
          if(name.value ==""||email.value==""){
           alert("NO BLANK VALUE ALLOWED");
@@ -22,7 +22,7 @@
         else{
           true;
         }
-         if(sub.value ==""||message.value==""){
+         if(subject.value ==""||message.value==""){
           alert("BOTH SUBJECT AND MESSAGE ARE ESSENTIAL TO CONTINUE !!");
           return false;
          }
@@ -34,7 +34,7 @@
    </script>
 </head>
 <div class="navi">
-    <p style="color: blue;width: 23px;">NTWARI<p>
+    <p style="color: blue;font-size:larger;">NTWARI</p>
     <ul>
         <li style="
 
