--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <a href="index.html">HOME</a>
         <a href="education.html">EDUCATION</a>
           <a href="area.html">EXPERIENCE</a>
-            <a href="blog.html">BLOG</a>
+            <a href="field of experiance.html">FIELD OF EXPERIANCE</a>
               <a href="contact me.html">CONTACT ME</a>
         <a href=" https://www.facebook.com/ntwari.fiacre.7?_rdc=1&_rdr"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#FFFFFF" class="bi bi-facebook" viewBox="0 0 16 16">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
@@ -128,7 +128,7 @@
             <a href="index.html"><button class="a1"></button></a>
             <a href="education.html"><button class="a2"></button></a>
               <a href="area.html"><button class="a3"></button></a>
-              <a href="blog.html"> <button class="a4"></button></a>
+              <a href="field of experiance.html"> <button class="a4"></button></a>
              <a href="contact me.html"><button class="a5"></button></a>
                <a href="index.html"><button class="a6"></button></a>
         </div>
