--- a/field of experiance.html
+++ b/field of experiance.html
@@ -91,7 +91,7 @@
   </div>
   </div>
 </div>
-
+<div class="rest">
               <a href="index.html"><button class="a1"></button></a>
               <a href="education.html"><button class="a2"></button></a>
                 <a href="area.html"><button class="a3"></button></a>
@@ -182,5 +182,6 @@
 
        </p>
      </div>
+    </div>
 </body>
 </html>
