--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
 
 
-            </div>
+             <div class="rest">
             <a href="index.html"><button class="a1"></button></a>
             <a href="education.html"><button class="a2"></button></a>
               <a href="area.html"><button class="a3"></button></a>
@@ -182,7 +182,7 @@
                </svg></a> 
              </div>
             <p>  
-          <!-- icons -->
+         </div>  
 </body>
 </html>
 
