read me improvement as well as other files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <div class="navi">
-  <p style="color: blue;width: 23px;">NTWARI<p>
+  <p style="color: blue;">NTWARI<p>
   <ul>
       <li style="
 
