--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <div class="navi">
         <p style="color: blue;">NTWARI<p>
         <ul>
+          <div class="o">
           <li id="number">(+250 790 100 861)</li>
               <li id="line">/</li>
               <li id="address"><a href="https://mail.google.com/mail/u/0/#inbox"style="color: #FFFFFF;">ntwarifiacre043@gmail.com</a></li>
-        </ul>
+         </div> 
+         </ul>
         <div class=" dropdown"> 
         <div class="listing">
       <button class="dropbtn">
@@ -49,12 +51,12 @@
      <p style="color:#FFFFFF"> @ntwarifiacre2022</p>
       </div>
       </div> 
-
+    
 
 <body>
     <div class="left">
-  <p class="ashimwe">I'M </p>
-  <p  class="fifi" style="color: aliceblue;"> NTWARI ASHIMWE FIACRE</p>
+  <p class="ashimwe">Howdy, I'M 
+    NTWARI ASHIMWE FIACRE </p>
   <div class="line"></div>
     <p id="watch">
       watch Resume
@@ -71,9 +73,6 @@
      </div>
     </div>
     <div class="right">
-      <div id="img">
-      <img src="fiacre.jpg" alt=""  >
-      </div>
              <div class="rest">
             <a href="index.html"><button class="a1"></button></a>
             <a href="education.html"><button class="a2"></button></a>
