--- a/education.html
+++ b/education.html
@@ -61,6 +61,16 @@
          <a href="contact me.html"><button class="a5"></button></a>
            <a href="index.html"><button class="a6"></button></a>
         </div>
+        <div  id="box_experience">
+          <p id="exp">EXPERIENCE</p>
+          <p id="exp_para">The experience I possess right now
+            is from my previous high school "GS Mater Dei"
+            from 2018 to 2022 .That would not be all ,
+            other is from KLab where am currently taking online
+            course on Html,Css and javascript along with Figma. 
+
+          </p>
+        </div>
        <div id="ico">
            <p> <div id="face">
           <a href=" https://www.facebook.com/ntwari.fiacre.7?_rdc=1&_rdr"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ffffff " class="bi bi-facebook" viewBox="0 0 16 16">
@@ -86,7 +96,10 @@
         </div>
        </div>
 <div class="left">
-    <p class="my">EDUCATION</p>
+  <div id="box_edu">
+    <p class="my">EDUCATION
+
+    </p>
         <p  class="para" >
              My almost education is from
             GROUPE SCOLAIRE MATER
@@ -96,6 +109,7 @@
             MCE COMBINATION(MATHS-ECO
             NOMICS AND COMPUTER SCIENCE)
         </p>
+  </div>
         <p>
          @ntwarifiacre2022
        </p>
