--- a/area.html
+++ b/area.html
@@ -106,7 +106,11 @@
         <a href="contact me.html"><button class="a5"></button></a>
           <a href="index.html"><button class="a6"></button></a>
     </div>
-    <p class="pp">MY SPECIALIZATION<p>
+    <p class="pp">
+      <span style="color:#DA4C84">MY </span>
+      <span style="color:#fff">SPECIALIZATION</span>
+      
+      <p>
 
     <div class="web">
         <svg xmlns="http://www.w3.org/2000/svg" width="125.61px" height="99.99px" fill="#fff" class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
