--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
 
 <body>
     <div class="left">
-  <p class="ashimwe">Howdy, I'M 
-    NTWARI ASHIMWE FIACRE </p>
+  <p class="ashimwe"> 
+    <span style="color: #DA4C84">Howdy,</span>
+    <span style="color:#fff">I'M </span>
+    <p>NTWARI ASHIMWE FIACRE</p>
+  </p>
+
   <div class="line"></div>
     <p id="watch">
       watch Resume
