--- a/contact me.html
+++ b/contact me.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact me</title>
     <link rel="stylesheet" href="cont.css"/>
+   
     <script defer src="first.js"></script> 
    <script type="text/javascript">
 
@@ -106,7 +107,7 @@
           <input type="email" id="email" placeholder="EMAIL"/>
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
-          <small style="color: #FFFFFF;">Error message</small>
+          <small style="color: #FFFFFF;"> </small>
           </div>
            
           <div class="form-control ">
@@ -114,17 +115,17 @@
           <input id="subject" type="text"placeholder="subject(optional)"/>
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
-          <small style="color: #FFFFFF;">Error message</small>
+          <small style="color: #FFFFFF;"> </small>
           </div>     
           </div>
 
           <div class="form-control">
          <div class="msgbox">
-         <input id="msgbox" type="<textarea rows="" cols="" placeholder="message"style="
-         background: #2F2F2F; "></textarea>
+          <textarea rows="10" cols="52"placeholder="message"style="
+         background: #232628; "></textarea>
           <i class="fas fa-check-circle"></i>
           <i class="fas fa-exclamation-circle"></i>
-          <small style="color: #FFFFFF;">Error message</small>
+          <small style="color: #FFFFFF;"> </small>
          </div>
          </div>
 
