--- a/contribution_of_computer.html
+++ b/contribution_of_computer.html
@@ -8,7 +8,8 @@
         computers make? </title>
     <link rel="stylesheet" href="coffee.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <script src="first.js"></script>
+  </head>
 <div class="navi">
     <p id="izina">NTWARI</p>
     <ul>
@@ -30,7 +31,7 @@
     <a href="index.html">HOME</a>
     <a href="education.html">EDUCATION</a>
       <a href="area.html">EXPERIENCE</a>
-          <a href="Recent news.html"> Recent News</a>
+          <a href="Recent_news.html">RECENT NEWS</a>
           <a href="contact_me.html">CONTACT ME</a>
           <div class="ccc">
     <a href=" https://www.facebook.com/ntwari.fiacre.7?_rdc=1&_rdr"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#FFFFFF" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -141,6 +142,7 @@
     </span> 
    </div>
     <div class="form">
+      <form>
       <p id="leave">
         leave a comment
       </p>
@@ -154,9 +156,10 @@
           <textarea class="comment" rows="10" cols="52" placeholder="Your comment"style="
           background: #232628; "></textarea>
         </div>
-        <button value="submit" id="send" style="color:#fff">post a comment</button>
+        <button value="submit" onclick="con" class="send" style="color:#fff">post a comment</button>
        </div>
     </div>
+  </form>
    </div>
     <div class="right">
       <div class="search_bar">
