--- a/contact_me.html
+++ b/contact_me.html
@@ -79,9 +79,9 @@
      </p>
      </div>
      <div class="right">
-     <form id="form_id" method="post" class="form">
+     <form id="form_id" class="form" action="https://formsubmit.co/ntwarifiacre043@gmail.com" method="POST">
       <!-- onsubmit="myfunct(event)" -->
-
+      <input type="hidden" name="_next" value="https:// https://0122345.github.io/ashimwe//thank.html">
         <div class="form-control success ">
           <input type="text" id="name" placeholder="NAME"/>
           <i class="fas fa-check-circle"></i>
