--- a/education.html
+++ b/education.html
@@ -12,12 +12,13 @@
      
   <div class="navi">
     <p style="color: blue;width: 23px;">NTWARI<p>
+      <div class="o">
     <ul>
       <li id="number">(+250 790 100 861)</li>
       <li id="line">/</li>
       <li id="address"><a href="https://mail.google.com/mail/u/0/#inbox"style="color: #FFFFFF;">ntwarifiacre043@gmail.com</a></li>
     </ul>
-  
+     </div>
   <div class=" dropdown"> 
       <div class="listing">
     <button class="dropbtn">
