--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
       </button>
       </div>
       <div class="dropdown-content">
+        <div class="scroller">
         <a href="index.html">HOME</a>
         <a href="education.html">EDUCATION</a>
           <a href="area.html">EXPERIENCE</a>
             <a href="Recent_news.html">RECENT NEWS</a>
               <a href="contact_me.html">CONTACT ME</a>
+            </div>
               <div class="ccc">
         <a href=" https://www.facebook.com/ntwari.fiacre.7?_rdc=1&_rdr"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#FFFFFF" class="bi bi-facebook" viewBox="0 0 16 16">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
@@ -48,11 +50,9 @@
           <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
         </svg></a>
       </div>
-     <p style="color:#FFFFFF"> @ntwarifiacre2022</p>
+      <p  id="ntwari"style="color:#FFFFFF"> @ntwarifiacre2022.All Rights Reserved</p>
       </div>
       </div> 
-    
-
 <body>
     <div class="left">
   <p class="ashimwe"> 
@@ -71,8 +71,8 @@
     <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
      </svg></a>
      </div>
-      <p id="ijambo">
-      <a href="https://mail.google.com/mail/u/0/#inbox" style="color: #FFFFFF;">  @ntwarifiacre2022 </a>
+      <p id="ijambo" style="color: #FFFFFF;">
+       @ntwarifiacre2022  
       </p>
      </div>
     </div>
