blog html updated

--- a/coffeenews.html
+++ b/coffeenews.html
@@ -7,7 +7,7 @@
     <title> Coffee, do you actual know about it</title>
     <link rel="stylesheet" href="coffee.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="first.js"> </script>
+    <script defer src="first.js"></script> 
   </head>
 <div class="navi">
     <p id="izina">NTWARI</p>
@@ -57,12 +57,37 @@
 <body>
     
     <div class="rest">
+      <section id="a1">
+        <div class="container reveal">
         <a href="index.html"><button class="a1"></button></a>
+        </div>
+        </section>
+
+        <section id="a2" >
+          <div class="container reveal">
         <a href="education.html"><button class="a2"></button></a>
+         </div>
+          </section>
+        <section id="a3" class="active">
+          <div class="container reveal">
           <a href="area.html"><button class="a3"></button></a>
-          <a href="Recent news.html"> <button class="a4"></button></a>
+          </div>
+          </section>
+          <section id="a4">
+            <div class="container reveal">
+          <a href="Recent_news.html"> <button class="a4"></button></a>
+           </div>
+           </section>
+          <section id="a5">
+            <div class="container reveal">
          <a href="contact_me.html"><button class="a5"></button></a>
+            </div>
+            </section>
+         <section id="a6">
+          <div class="container reveal">
            <a href="index.html"><button class="a6"></button></a>
+           </div>
+           </section>
     </div>  
      
     <div class="left">
@@ -72,9 +97,9 @@
      <p>
       <a href="index.html">  <span style="color:#DA4C84">Home </span</a>
         <span style="color:#fff;"> - </span>
-      <a href="#">  <span style="color:#DA4C84">Blog</span></a>   
+      <a href="blog.html">  <span style="color:#DA4C84">Blog</span></a>   
            <span style="color:#fff;"> - </span>
-      <a href="#">  <span style="color:#DA4C84">News </span</a> 
+      <a href="Recent_news.html">  <span style="color:#DA4C84">News </span</a> 
         <span style="color:#fff;"> - </span>
         <span style="color:#fff;">Coffee, do you actual know about it</span>
      </p>
