--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); </style>
     <link rel="stylesheet" href="styles.css"/>
+    <script defer src="first.js"></script> 
 </head>
 
 <div class="navi">
@@ -57,8 +59,8 @@
     <div class="left">
   <p class="ashimwe"> 
     <span style="color: #DA4C84">Howdy,</span>
-    <span style="color:#fff">I'M </span>
-    <p>NTWARI ASHIMWE FIACRE</p>
+    <span style="color:#fff">I'M NTWARI </span>
+    <span>  ASHIMWE FIACRE</span> 
   </p>
 
   <div class="line"></div>
@@ -78,12 +80,37 @@
     </div>
     <div class="right">
              <div class="rest">
-            <a href="index.html"><button class="a1"></button></a>
-            <a href="education.html"><button class="a2"></button></a>
-              <a href="area.html"><button class="a3"></button></a>
-              <a href="Recent_news.html"> <button class="a4"></button></a>
-             <a href="contact_me.html"><button class="a5"></button></a>
-               <a href="index.html"><button class="a6"></button></a>
+              <section id="a1">
+                <div class="container reveal">
+                <a href="index.html"><button class="a1"></button></a>
+                </div>
+                </section>
+        
+                <section id="a2" >
+                  <div class="container reveal">
+                <a href="education.html"><button class="a2"></button></a>
+                 </div>
+                  </section>
+                <section id="a3" class="active">
+                  <div class="container reveal">
+                  <a href="area.html"><button class="a3"></button></a>
+                  </div>
+                  </section>
+                  <section id="a4">
+                    <div class="container reveal">
+                  <a href="Recent_news.html"> <button class="a4"></button></a>
+                   </div>
+                   </section>
+                  <section id="a5">
+                    <div class="container reveal">
+                 <a href="contact_me.html"><button class="a5"></button></a>
+                    </div>
+                    </section>
+                 <section id="a6">
+                  <div class="container reveal">
+                   <a href="index.html"><button class="a6"></button></a>
+                   </div>
+                   </section>
         </div>
        <div id="ico">
             <div id="face">
