--- a/coffeenews.html
+++ b/coffeenews.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Coffee, do you actual know about it</title>
+    <!-- <link rel="stylesheet" href="/css"> -->
     <link rel="stylesheet" href="coffee.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script defer src="first.js"></script> 
@@ -56,36 +57,36 @@
   </div>
 <body>
     
-    <div class="rest">
+    <div class="rest"onsubmit="return click()">
       <section id="a1">
         <div class="container reveal">
-        <a href="index.html"><button class="a1"></button></a>
+        <a href="index.html"><button onclick="a1()" class="a1"></button></a>
         </div>
         </section>
 
         <section id="a2" >
           <div class="container reveal">
-        <a href="education.html"><button class="a2"></button></a>
+        <a href="education.html"><button onclick="a2()" onclass="a2"></button></a>
          </div>
           </section>
         <section id="a3" class="active">
           <div class="container reveal">
-          <a href="area.html"><button class="a3"></button></a>
+          <a href="area.html"><button onclick="a3()" class="a3"></button></a>
           </div>
           </section>
           <section id="a4">
             <div class="container reveal">
-          <a href="Recent_news.html"> <button class="a4"></button></a>
+          <a href="Recent_news.html"> <button onclick="a4()"class="a4"></button></a>
            </div>
            </section>
           <section id="a5">
             <div class="container reveal">
-         <a href="contact_me.html"><button class="a5"></button></a>
+         <a href="contact_me.html"><button onclick="a5()"class="a5"></button></a>
             </div>
             </section>
          <section id="a6">
           <div class="container reveal">
-           <a href="index.html"><button class="a6"></button></a>
+           <a href="index.html"><button onclick="a6()" class="a6"></button></a>
            </div>
            </section>
     </div>  
