--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
      </div>
     </div>
     <div class="right">
-             <div class="rest">
+             <div class="rest"onsubmit="return click()">
               <section id="a1">
                 <div class="container reveal">
                 <a href="index.html"><button class="a1"></button></a>
