--- a/Recent_news.html
+++ b/Recent_news.html
@@ -56,7 +56,7 @@
   </div> 
   </div>
 <body>
-    <div class="rest">
+    <div class="rest" onsubmit="return click()">
       <section id="a1">
         <div class="container reveal">
         <a href="index.html"><button class="a1"></button></a>
