--- a/area.html
+++ b/area.html
@@ -59,7 +59,7 @@
 
 <body> 
   <div class="right">
-    <div class="rest">
+    <div class="rest"onsubmit="return click()">
       <section id="a1">
         <div class="container reveal">
         <a href="index.html"><button class="a1"></button></a>
