--- a/contact_me.html
+++ b/contact_me.html
@@ -57,7 +57,7 @@
 </div> 
   </div>
 <body>
-    <div class="rest">
+    <div class="rest" onsubmit="return click()">
       <section id="a1">
         <div class="container reveal">
         <a href="index.html"><button class="a1"></button></a>
@@ -81,7 +81,7 @@
            </section>
           <section id="a5">
             <div class="container reveal">
-         <a href="contact_me.html"><button class="a5"></button></a>
+         <a href="contact_me.html"><button  class="a5" > </button></a>
             </div>
             </section>
          <section id="a6">
