--- a/blog.html
+++ b/blog.html
@@ -105,7 +105,7 @@
              evergreen coffee plant. Coffee is one
              .......
           </p>
-     <a href="coffeenews.html"><button>Read more</button></a>
+     <a href="coffeenews.html"><button >Read more</button></a>
 
   </div>
       
@@ -122,7 +122,7 @@
         some companies may find functioning without them
          virtually impossible.....
       </p>
-      <a href="contribution_of_computer.html"><button>Read more</button></a>
+      <a href="contribution_of_computer.html"><button id="btn">Read more</button></a>
      </div>
 
      <div class="footer">
