--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
              <div class="rest"onsubmit="return click()">
               <section id="a1">
                 <div class="container reveal">
-                <a href="index.html"><button class="a1"></button></a>
+                <a href="index.html">
+                  <button class="a1"></button>
+                </a>
                 </div>
                 </section>
         
